# faria

./: .gitignore  README.md  config.ini  default.nix  main.py  pyproject.toml
db/: create.py  faria.db  truncate.py
src/: database.py  gemini_api.py  logger.py  tui.py  utils.py  youtube_auth.py  youtube_user.py
